...
    ui: FriendProfileUi,
    movieDetailsMap: Map<Int, Movie>,
    padding: PaddingValues,
    onMovieSelect: (Movie) -> Unit
) {
    var tabIndex by remember { mutableStateOf(0) }
    val tabs = listOf("Rankings", "Watchlist")

    Column(
        modifier = Modifier
            .fillMaxSize()
            .padding(padding)
            .padding(horizontal = 16.dp)
...
